--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ go:
   - 1.9.4
 
 env:
-  - "GIMME_OS=linux GIMME_ARCH=amd64"
-  - "GIMME_OS=darwin GIMME_ARCH=amd64"
-  - "GIMME_OS=windows GIMME_ARCH=amd64"
-  - "GIMME_OS=windows GIMME_ARCH=386"
+  - "CGO_ENABLED=0 GIMME_OS=linux GIMME_ARCH=amd64"
+  - "CGO_ENABLED=0 GIMME_OS=darwin GIMME_ARCH=amd64"
+  - "CGO_ENABLED=0 GIMME_OS=windows GIMME_ARCH=amd64"
+  - "CGO_ENABLED=0 GIMME_OS=windows GIMME_ARCH=386"
 
 before_install:
   - go get github.com/axw/gocov/gocov
