Incorporated review feedback, updated docs, added more tests, and added optional configuration setting for an ip interface to bind to.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ go:
   - 1.9.4
 
 env:
-  - "CGO_ENABLED=0 GIMME_OS=linux GIMME_ARCH=amd64"
-  - "CGO_ENABLED=0 GIMME_OS=darwin GIMME_ARCH=amd64"
-  - "CGO_ENABLED=0 GIMME_OS=windows GIMME_ARCH=amd64"
-  - "CGO_ENABLED=0 GIMME_OS=windows GIMME_ARCH=386"
+  - "GIMME_OS=linux GIMME_ARCH=amd64"
+  - "GIMME_OS=darwin GIMME_ARCH=amd64"
+  - "GIMME_OS=windows GIMME_ARCH=amd64"
+  - "GIMME_OS=windows GIMME_ARCH=386"
 
 before_install:
   - go get github.com/axw/gocov/gocov
@@ -15,12 +15,13 @@ before_install:
   - go get github.com/pierrre/gotestcover
 
 script:
-# need to test without gotestcover since error code is not reliable for gotestcover
-  - "test $GIMME_OS.$GIMME_ARCH != linux.amd64 || go test -v ./..."
+  # need to test without gotestcover since error code is not reliable for gotestcover
+  - 'CGO_ENABLED=0 go install -v -ldflags "-X main.revision=$(git rev-parse HEAD)" ./...'
+  - 'test $GIMME_OS.$GIMME_ARCH != linux.amd64 || CGO_ENABLED=1 GORACE=history_size=7 go test -v -ldflags "-X github.com/taskcluster/taskcluster-proxy.revision=$(git rev-parse HEAD)" ./...'
 
 after_script:
-# using gotestcover means tests get run again, but need to do this since exit code of gotestcover is unreliable
-  - "if test $GIMME_OS.$GIMME_ARCH = linux.amd64; ${GOPATH}/bin/gotestcover -v -coverprofile=coverage.report ./...; go tool cover -func=coverage.report; ${HOME}/gopath/bin/goveralls -coverprofile=coverage.report -service=travis-ci; fi"
+  # using gotestcover means tests get run again, but need to do this since exit code of gotestcover is unreliable
+  - "test $GIMME_OS.$GIMME_ARCH != linux.amd64 || CGO_ENABLED=1 GORACE=history_size=7 ./gotestcover.sh coverage.report"
 
 notifications:
   irc:
