--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "error-stack-parser": "^2.0.1",
     "material-ui": "^1.0.0-beta.37",
     "mdi-react": "^2.1.19",
     "prop-types": "^15.6.1",
@@ -24,6 +25,7 @@
     "react-hot-loader": "^4.0.0",
     "react-loadable": "^5.3.1",
     "react-router-dom": "^4.2.2",
+    "redbox-react": "^1.5.0",
     "typeface-roboto": "^0.0.54"
   },
   "devDependencies": {
