--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "license": "MPL-2.0",
+  "engines": {
+    "node": ">=8.0.0",
+    "yarn": ">=1.3.2"
+  },
   "scripts": {
     "build": "neutrino build --require dotenv/config",
     "start": "neutrino start --require dotenv/config",
@@ -10,6 +14,7 @@
     "precommit": "neutrino stage"
   },
   "dependencies": {
+    "@material-ui/lab": "^1.0.0-alpha.0",
     "apollo-cache-inmemory": "^1.1.11",
     "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.2.7",
@@ -19,9 +24,13 @@
     "apollo-link-http": "^1.5.3",
     "auth0-js": "^9.3.3",
     "classnames": "^2.2.5",
+    "date-fns": "^1.29.0",
     "error-stack-parser": "^2.0.1",
     "graphql": "^0.13.2",
+    "highlight.js": "^9.12.0",
+    "is-absolute-url": "^2.1.0",
     "localforage": "^1.6.0",
+    "markdown-to-jsx": "^6.6.1",
     "material-ui": "1.0.0-beta.40",
     "mdi-react": "^3.0.0",
     "prop-types": "^15.6.1",
