--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "highlight.js": "^9.12.0",
     "is-absolute-url": "^2.1.0",
     "localforage": "^1.6.0",
-    "markdown-to-jsx": "^6.6.1",
+    "markdown-it": "^8.4.1",
+    "markdown-it-highlightjs": "^3.0.0",
+    "markdown-it-link-attributes": "^2.1.0",
     "material-ui": "1.0.0-beta.40",
+    "material-ui-icons": "^1.0.0-beta.36",
     "mdi-react": "^3.0.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.0",
@@ -42,6 +45,7 @@
     "react-fout-stager": "^3.0.0",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.0.0",
+    "react-lazylog": "^3.1.3",
     "react-loadable": "^5.3.1",
     "react-router-dom": "^4.2.2",
     "redbox-react": "^1.5.0",
