--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "styleguide": "neutrino styleguide:start --require dotenv/config"
   },
   "dependencies": {
-    "@material-ui/icons": "^1.0.0-beta.42",
+    "@material-ui/icons": "^1.0.0-beta.43",
     "@material-ui/lab": "^1.0.0-alpha.0",
     "apollo-cache-inmemory": "^1.1.11",
     "apollo-cache-persist": "^0.1.1",
@@ -38,12 +38,13 @@
     "markdown-it-highlightjs": "^3.0.0",
     "markdown-it-link-attributes": "^2.1.0",
     "material-ui": "1.0.0-beta.41",
+    "material-ui-pickers": "^1.0.0-rc.7",
     "mdi-react": "^3.0.0",
     "prop-types": "^15.6.1",
-    "react": "^16.3.0",
+    "react": "^16.3.2",
     "react-apollo": "^2.0.4",
     "react-auth0-components": "^1.0.0",
-    "react-dom": "^16.3.0",
+    "react-dom": "^16.3.2",
     "react-fout-stager": "^3.0.0",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.0.0",
