--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "auth0-js": "^9.3.3",
     "change-case": "^3.0.2",
     "classnames": "^2.2.5",
+    "codemirror": "^5.38.0",
     "date-fns": "2.0.0-alpha.7",
     "dot-prop-immutable": "^1.4.0",
     "error-stack-parser": "^2.0.1",
     "graphql": "^0.13.2",
     "highlight.js": "^9.12.0",
     "is-absolute-url": "^2.1.0",
+    "js-yaml": "^3.11.0",
     "localforage": "^1.6.0",
     "markdown-it": "^8.4.1",
     "markdown-it-highlightjs": "^3.0.0",
@@ -44,6 +46,7 @@
     "react": "^16.3.2",
     "react-apollo": "^2.0.4",
     "react-auth0-components": "^1.0.0",
+    "react-codemirror2": "^5.0.2",
     "react-dom": "^16.3.2",
     "react-fout-stager": "^3.0.0",
     "react-helmet": "^5.2.0",
@@ -52,6 +55,7 @@
     "react-loadable": "^5.3.1",
     "react-router-dom": "^4.2.2",
     "redbox-react": "^1.5.0",
+    "taskcluster-lib-urls": "^10.0.0",
     "typeface-roboto": "^0.0.54"
   },
   "devDependencies": {
