--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "styleguide": "neutrino styleguide:start --require dotenv/config"
   },
   "dependencies": {
-    "@material-ui/icons": "^1.0.0-beta.43",
-    "@material-ui/lab": "^1.0.0-alpha.0",
+    "@material-ui/core": "^1.1.0",
+    "@material-ui/icons": "^1.1.0",
+    "@material-ui/lab": "1.0.0-alpha.3",
     "apollo-cache-inmemory": "^1.1.11",
     "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.2.7",
@@ -39,8 +40,8 @@
     "markdown-it": "^8.4.1",
     "markdown-it-highlightjs": "^3.0.0",
     "markdown-it-link-attributes": "^2.1.0",
-    "material-ui": "1.0.0-beta.41",
-    "material-ui-pickers": "^1.0.0-rc.7",
+    "material-ui-pickers": "^1.0.0-rc.9",
+    "material-ui-treeview": "^1.0.0",
     "mdi-react": "^3.0.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
