--- a/modules/service-secrets/secrets_resource.yaml
+++ b/modules/service-secrets/secrets_resource.yaml
@@ -6,4 +6,4 @@ metadata:
 data:
   $map: {$eval: secrets}
   each(s):
-    ${s.key}: $${base64encode(${s.key})}
+    ${s.key}: {$eval: base64encode(s.val)}
