taskcluster.async -> taskcluster.aio to fix py37
`async` is now a keyword, so `import taskcluster.async` breaks.
This is a breaking change.

--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,8 @@ envlist =
 # and then running the command that tox *would* use works, but when you use the same thing
 # inside of this file and get an error like this:
 #
-# nose.plugins.nose_exclude: WARNING: The following path was not found: "test/async
-# nose.plugins.nose_exclude: WARNING: The following path was not found: taskcluster/async"
+# nose.plugins.nose_exclude: WARNING: The following path was not found: "test/aio
+# nose.plugins.nose_exclude: WARNING: The following path was not found: taskcluster/aio"
 #
 # even though using python -c "import os ; print(os.getcwd())" shows that we're in the
 # same working directory that the code is in.
@@ -22,8 +22,8 @@ envlist =
 
 [testenv:py27]
 setenv =
-    EX1 = --exclude-dir=test/async
-    EX2 = --exclude-dir=taskcluster/async
+    EX1 = --exclude-dir=test/aio
+    EX2 = --exclude-dir=taskcluster/aio
     IG = "--ignore=.*async.*"
 
 [testenv]
