--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,18 @@
 sudo: false
 language: python
-python:
-  - "2.7"
-  - "3.5"
-  - "3.6"
-install: pip install tox-travis
+
+matrix:
+  fast_finish: true
+  include:
+    - python: 2.7
+      env: TOXENV=py27
+    - python: 3.5
+      env: TOXENV=py35
+    - python: 3.6
+      env: TOXENV=py36
+    - python: 3.7-dev
+      env: TOXENV=py37
+install: python -mpip install tox-travis
 script: tox
 
 # encrpyt channel name to get around issue
