--- a/modules/static-service/deployment.yaml
+++ b/modules/static-service/deployment.yaml
@@ -40,3 +40,10 @@ spec:
                     key: '${k}'
         ports:
         - containerPort: 80
+        readinessProbe:
+          httpGet:
+            path: "${readiness_path}"
+            port: 80
+          timeoutSeconds: 5
+          periodSeconds: 60
+          initialDelaySeconds: 3
