--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/core": "^1.3.1",
     "@material-ui/icons": "^1.1.0",
     "@material-ui/lab": "1.0.0-alpha.5",
+    "@mozilla-frontend-infra/components": "^1.0.0",
     "apollo-cache-inmemory": "^1.2.5",
     "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.3.5",
@@ -44,9 +45,9 @@
     "material-ui-pickers": "^1.0.0-rc.9",
     "material-ui-treeview": "^1.1.0",
     "mdi-react": "^3.0.0",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-apollo": "^2.1.9",
-    "prop-types": "^15.6.2",
     "react-auth0-components": "^1.0.0",
     "react-codemirror2": "^5.1.0",
     "react-dom": "^16.4.1",
