--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "classnames": "^2.2.6",
     "codemirror": "^5.39.0",
     "date-fns": "2.0.0-alpha.7",
+    "dexie": "^2.0.4",
     "dot-prop-immutable": "^1.4.0",
     "error-stack-parser": "^2.0.2",
     "graphql": "^0.13.2",
