--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "classnames": "^2.2.6",
     "codemirror": "^5.39.0",
     "date-fns": "2.0.0-alpha.7",
+    "deepmerge": "^2.1.1",
     "dexie": "^2.0.4",
     "dot-prop-immutable": "^1.4.0",
     "error-stack-parser": "^2.0.2",
@@ -39,6 +40,7 @@
     "is-absolute-url": "^2.1.0",
     "js-yaml": "^3.12.0",
     "localforage": "^1.7.2",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "markdown-it": "^8.4.1",
     "markdown-it-highlightjs": "^3.0.0",
@@ -64,7 +66,9 @@
   "devDependencies": {
     "@neutrinojs/env": "^8.3.0",
     "@neutrinojs/jest": "^8.3.0",
+    "@neutrinojs/karma": "^8.3.0",
     "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
     "dotenv": "^5.0.1",
     "graphql-tag": "^2.8.0",
     "neutrino": "^8.3.0",
