--- a/ingress.yaml
+++ b/ingress.yaml
@@ -31,6 +31,8 @@ spec:
             - {service_name: queue, project_name: taskcluster-queue}
             - {service_name: hooks, project_name: taskcluster-hooks}
             - {service_name: index, project_name: taskcluster-index}
+            - {service_name: gce-provider, project_name: gce-provider}
+            - {service_name: events, project_name: taskcluster-events}
           each(svc):
             $if: '!(svc.project_name in disabled_services)'
             then:
