Add Task Group view (#112)
* Change color and remove unused styling

* Add component for displaying a table of task groups

Also updated packages

* Add component to view progress of a task group

* Add No Task Group view and update No Task view

* Add task group view

* Enhance the status card UI

--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@material-ui/core": "^1.5.1",
     "@material-ui/icons": "^1.1.1",
     "@material-ui/lab": "1.0.0-alpha.5",
-    "@mozilla-frontend-infra/components": "^1.0.0",
-    "apollo-cache-inmemory": "^1.2.5",
+    "@mozilla-frontend-infra/components": "^1.0.1",
+    "apollo-cache-inmemory": "^1.2.9",
     "apollo-cache-persist": "^0.1.1",
-    "apollo-client": "^2.3.5",
+    "apollo-client": "^2.4.1",
     "apollo-link": "^1.2.1",
     "apollo-link-context": "^1.0.7",
     "apollo-link-error": "^1.1.0",
@@ -35,6 +35,7 @@
     "dexie": "^2.0.4",
     "dot-prop-immutable": "^1.4.0",
     "error-stack-parser": "^2.0.2",
+    "fast-memoize": "^2.5.1",
     "graphql": "^0.13.2",
     "highlight.js": "^9.12.0",
     "is-absolute-url": "^2.1.0",
@@ -47,10 +48,10 @@
     "markdown-it-link-attributes": "^2.1.0",
     "material-ui-pickers": "^1.0.0-rc.9",
     "material-ui-treeview": "^1.1.0",
-    "mdi-react": "^3.0.0",
+    "mdi-react": "^4.3.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
-    "react-apollo": "^2.1.9",
+    "react-apollo": "^2.1.11",
     "react-codemirror2": "^5.1.0",
     "react-dom": "^16.4.1",
     "react-fout-stager": "^3.0.0",
