--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,19 @@
 language: go
 go:
-  - 1.10.2
+  - 1.10.4
 
 env:
   - "GIMME_OS=linux GIMME_ARCH=amd64"
   - "GIMME_OS=linux GIMME_ARCH=arm"
-  - "GIMME_OS=linux GIMME_ARCH=arm64"
+
+  # Disabling arm64/linux while https://github.com/travis-ci/gimme/issues/154
+  # is open
+  #
+  # Note, we could fix this by installing go binary directly and setting
+  # GOOS/GOARCH; gimme isn't needed these days for cross compilation...
+  #
+  # - "GIMME_OS=linux GIMME_ARCH=arm64"
+
   - "GIMME_OS=darwin GIMME_ARCH=amd64"
   - "GIMME_OS=windows GIMME_ARCH=amd64"
   - "GIMME_OS=windows GIMME_ARCH=386"
