--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-fout-stager": "^3.0.0",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.3.6",
+    "react-json-inspector": "^7.1.1",
     "react-lazylog": "^3.1.3",
     "react-loadable": "^5.3.1",
     "react-router-dom": "^4.3.1",
