--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "date-fns": "2.0.0-alpha.7",
     "deepmerge": "^2.1.1",
     "dexie": "^2.0.4",
+    "docker-exec-websocket-server": "^1.3.5",
     "dot-prop-immutable": "^1.4.0",
     "error-stack-parser": "^2.0.2",
     "fast-memoize": "^2.5.1",
     "graphql": "^0.13.2",
     "highlight.js": "^9.12.0",
+    "hterm-umd": "^1.0.1",
     "is-absolute-url": "^2.1.0",
     "js-yaml": "^3.12.0",
     "json-e": "^2.7.0",
@@ -63,10 +65,13 @@
     "react-lazylog": "^3.1.3",
     "react-loadable": "^5.3.1",
     "react-router-dom": "^4.3.1",
+    "react-vnc-display": "^1.1.0",
     "redbox-react": "^1.5.0",
+    "shebang-loader": "^0.0.1",
     "taskcluster-lib-scopes": "^10.0.1",
     "taskcluster-lib-urls": "^10.0.0",
-    "typeface-roboto": "^0.0.54"
+    "typeface-roboto": "^0.0.54",
+    "ws-shell": "^0.1.5"
   },
   "devDependencies": {
     "@neutrinojs/env": "^8.3.0",
@@ -78,5 +83,9 @@
     "graphql-tag": "^2.8.0",
     "neutrino": "^8.3.0",
     "neutrino-preset-mozilla-frontend-infra": "^4.1.0"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^3.0.5",
+    "utf-8-validate": "^4.0.2"
   }
 }
