--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "start": "neutrino styleguide:start",
     "build": "neutrino build",
     "lint": "neutrino lint",
-    "publish": "yarn build && npm publish build",
+    "test": "echo \"Error: no test specified\" && exit 0",
+    "prepublishOnly": "yarn && yarn build",
     "update:authors": "scripts/authors",
-    "styleguide:build": "neutrino styleguide:build"
+    "styleguide:build": "neutrino styleguide:build",
+    "semantic-release": "dotenv semantic-release"
   },
   "devDependencies": {
     "@material-ui/core": "^1.3.1",
     "auto-changelog": "^1.8.0",
     "babel-register": "^6.26.0",
+    "conventional-changelog-eslint": "^3.0.0",
+    "dotenv-cli": "^1.4.0",
     "neutrino": "^8.3.0",
     "neutrino-preset-mozilla-frontend-infra": "^4.1.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "semantic-release": "^15.9.16",
     "verdaccio": "^3.8.1"
   },
   "peerDependencies": {
