--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mozilla-frontend-infra/components",
-  "version": "1.1.2",
+  "version": "0.0.0-semantically-released",
   "description": "Mozilla Front End Infra Shareable React Components",
   "repository": "mozilla-frontend-infra/components",
   "license": "MPL-2.0",
@@ -14,14 +14,13 @@
     "prepublishOnly": "yarn && yarn build",
     "update:authors": "scripts/authors",
     "styleguide:build": "neutrino styleguide:build",
-    "semantic-release": "dotenv semantic-release"
+    "semantic-release": "semantic-release"
   },
   "devDependencies": {
     "@material-ui/core": "^1.3.1",
     "auto-changelog": "^1.8.0",
     "babel-register": "^6.26.0",
     "conventional-changelog-eslint": "^3.0.0",
-    "dotenv-cli": "^1.4.0",
     "neutrino": "^8.3.0",
     "neutrino-preset-mozilla-frontend-infra": "^4.1.0",
     "react": "^16.4.1",
