--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "yarn": ">=1.3.2"
   },
   "scripts": {
-    "build": "neutrino build --require dotenv/config",
+    "build": "yarn create:fragment-matcher && neutrino build --require dotenv/config",
     "start": "neutrino start --require dotenv/config",
     "test": "neutrino test",
     "lint": "neutrino lint",
     "precommit": "neutrino stage",
+    "create:fragment-matcher": "node src/scripts/queryServer",
     "styleguide": "neutrino styleguide:start --require dotenv/config"
   },
   "dependencies": {
@@ -82,7 +83,8 @@
     "dotenv": "^5.0.1",
     "graphql-tag": "^2.8.0",
     "neutrino": "^8.3.0",
-    "neutrino-preset-mozilla-frontend-infra": "^4.1.0"
+    "neutrino-preset-mozilla-frontend-infra": "^4.1.0",
+    "node-fetch": "^2.2.0"
   },
   "optionalDependencies": {
     "bufferutil": "^3.0.5",
