--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "@material-ui/core": "^1.3.1",
+    "@semantic-release/changelog": "^3.0.0",
+    "@semantic-release/git": "^7.0.4",
     "auto-changelog": "^1.8.0",
     "babel-register": "^6.26.0",
     "conventional-changelog-eslint": "^3.0.0",
